049_rot_matrix/grade.txt
Grading at 09/26/2018:21:19:15.254454
For commit ID d8ae9b90846a70cb8fcfbc2ca578a4710828f49d
rotateMatrix.c: In function ‘main’:
rotateMatrix.c:60:10: error: unused variable ‘ch’ [-Werror=unused-variable]
   int i, ch;
          ^~
cc1: all warnings being treated as errors

[31mError: failed to compile your code[0m
[31mCannot continue testing[0m
Overall Grade: F
